[gd_scene load_steps=2 format=3 uid="uid://dcc2emvtuhexg"]

[ext_resource type="Script" path="res://combat/quick_fight.gd" id="1_np2yh"]

[node name="combat" type="Node3D"]
script = ExtResource("1_np2yh")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 256.0
grow_horizontal = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -126.5
offset_right = 63.0
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="combat" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "COMBAT"

[node name="player_dice" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Dice : X"

[node name="monster_dice" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Monster Dice : X"

[node name="m1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "forest_monsters_0"

[node name="m2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "forest_monsters_1"

[node name="m3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "forest_monsters_2"

[node name="dice_result" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="escape" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Escape"

[connection signal="pressed" from="VBoxContainer/m1" to="." method="_on_m_1_pressed"]
[connection signal="pressed" from="VBoxContainer/m2" to="." method="_on_m_2_pressed"]
[connection signal="pressed" from="VBoxContainer/m3" to="." method="_on_m_3_pressed"]
[connection signal="pressed" from="VBoxContainer/escape" to="." method="_on_escape_pressed"]
